--- a/index.html
+++ b/index.html
@@ -1,37 +1,274 @@
 <!DOCTYPE html>
-<html>
 
-  <head>
+<html lang="en">
 
-    <title>Layout Master</title>
-    <link rel="stylesheet" type="text/css" href="./style.css">
+<head>
 
-  </head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <body>
+    <title>Bienes Raices</title>
 
-    <nav class="zone blue sticky">
-      <ul class="main-nav">
-        <li><a href="">About</a></li>
-        <li><a href="">Products</a></li>
-        <li><a href="">Our Team</a></li>
-        <li class="push"><a href="">Contacts</a></li>
-      </ul>
-    </nav>
-    <div class="container zone"><img class="cover" src="./img/undraw.png" alt=""></div>
-    <div class="zone blue grid-wrapper">
-      <div class="box zone"><img src="./img/files_2.png" alt=""></div>
-      <div class="box zone"><img src="./img/server_2_2.png" alt=""></div>
-      <div class="box zone"><img src="./img/monitor_settings_2.png" alt=""></div>
-      <div class="box zone"><img src="./img/server_3.png" alt=""></div>
-      <div class="box zone"><img src="./img/data_storage_2_2.png" alt=""></div>
-      <div class="box zone"><img src="./img/monitor_coding_2.png" alt=""></div>
-      <div class="box zone"><img src="./img/desktop_analytics_2.png" alt=""></div>
-      <div class="box zone"><img src="./img/server_safe_2.png" alt=""></div>
-    </div>
+    <!-- DATO: STYLE se usaba antiguamente y se puede dar formato pero el problema es habría que hacer todo el trabajo por cada HTML que se tenga, entonces es duplicar trabajo innecesariamente pudiendo hacer todo por CSS y así reflejará los cambios en todas las páginas en la que los elementos estén
     
-    <footer class="zone yellow">Leomvb</div>
+        <style>
+        h1 {
+            color: blue;
+        }
+    </style> -->
 
-  </body>
+    <!-- En https://fonts.google.com/ puedo buscar más de 1000 tipos de fuentes de manera completamente gratis en caso de no querer usar las que vengan aquí y simplemente he de linkear la fuente -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+
+    <!-- Esta es una librería que descargué de https://necolas.github.io/normalize.css/8.0.1/normalize.css la cual permite normalizar los tamaños y todo en distintos dispositivos, esa hoja CSS la copié y pegué en el archivo que linkee y listo -->
+    <link rel="stylesheet" href="./css/normalize.css">
+
+    <!-- Siempre debemos poner de último nuestra hoja de style.css para que sea lo último y definitivo que tome en cuenta dando prioridad a la misma por encima de las demás hojas vinculadas -->
+    <link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body>
+
+    <!-- Por lo general el HEADER suele usarse donde está la NAVBAR -->
+    <!-- El ID funciona como CLASS pero este es único y no puede o debería usarse en varias cosas a la vez -->
+    <header class="site-header inicio">
+
+        <!-- Creamos un DIV con CLASS CONTAINER para que podamos agarrar todo el contenido del HEADER y buscar centrarlo -->
+        <!-- A diferencia del ID, CLASS sí se puede utilizar de forma repetida con el mismo nombre -->
+        <div class="contenedor contenido-header">
+            <div class="barra">
+                <a href="index.html">
+                    <img class="logo" src="img/logo.svg" alt="Logotipo de Bienes Raices">
+                </a>
+
+                <!-- NAVBAR que es para hacer menús de navegación -->
+                <nav class="navegación">
+                    <a href="nosotros.html">Nosotros</a>
+                    <a href="anuncios.html">Anuncios</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contacto.html">Contacto</a>
+                    <!-- Por defecto sin agregar el target viene invisiblemente así: target="self" y hace que abra en la misma página -->
+                    <!-- Se puede agregar target="_blank" a los enlaces (a) y eso hace que al abrir esos enlaces, los abre en una nueva pestaña -->
+                </nav>
+            </div>
+
+            <h1>Venta de Casas y Departamentos Exclusivos de Lujo</h1>
+        </div>
+
+    </header>
+
+    <!-- Se suele usar SECTION solo si aplica al tener de hijos HX y realmente ser una sección diferente de la página -->
+    <section class="contenedor sección">
+
+        <h2 class="fw-300 centrar-texto">Más Sobre Nosotros</h2>
+
+        <!-- Luego se usa BASTANTE el DIV para no repetir de forma errónea los SECTION y básicamente con DIV podemos dividir partes dentro de otra parte que en este caso sería la sección -->
+        <div class="iconos-nosotros">
+            <!-- Creamos esta clase de arriba para poder aplicar un FLEXBOX a todos los hijos de abajo y empzar a modificar esta sección de la página -->
+            <div class="icono">
+                <!-- Aquí también creamos una clase, seleccionando <div> y luego presionando CTRL + D para seleccionar todos y procedemos a mover con las flechas y escribir la clase -->
+                <img src="img/icono1.svg" alt="Seguridad">
+                <h3>Seguridad</h3>
+                <p>Dolor sit amet consectetur adipisicing elit. Magnam enim reprehenderit quasi eaque, perferendis
+                    consectetur
+                    harum
+                    quae! Quae omnis natus quo dolorem illo blanditiis non. Illum, modi? Eaque, laboriosam iusto?</p>
+            </div>
+
+            <div class="icono">
+                <img src="img/icono2.svg" alt="Precio">
+                <h3>El Mejor Precio</h3>
+                <p>Dolor sit amet consectetur adipisicing elit. Ipsa mollitia totam voluptas eum alias, vero ut
+                    molestiae
+                    exercitationem quae deleniti dolor, delectus beatae nisi atque dolorum illo aperiam non consequatur.
+                </p>
+            </div>
+
+            <div class="icono">
+                <img src="img/icono3.svg" alt="Tiempo">
+                <h3>A Tiempo</h3>
+                <p>Dolor sit amet consectetur adipisicing elit. Iure, nulla obcaecati quam magnam debitis sit et sed
+                    dicta,
+                    facilis
+                    velit fugit fugiat nisi enim cumque. Quam suscipit magni tempora culpa.</p>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- Aquí se usa MAIN ya que es el contenido principal y el propósito de la página (venta de casas) -->
+    <main class="sección contenedor">
+        <!-- Metemos todo lo de abajo en "sección" y "contenedor" (clases) para empezar a dar formato a todo -->
+        <h2 class="fw-300 centrar-texto">Casas y Departamentos en Venta</h2>
+
+        <!-- De nuevo se vuelve a hacer uso del DIV que es muy útil para separar secciones/partes de una misma sección o un mismo contenido por decirlo así -->
+        <!-- Damos esta clase contenedor-anuncios para aplicar flexbox en css luego -->
+        <div class="contenedor-anuncios">
+            <div class="anuncio">
+                <img src="img/anuncio1.jpg" alt="Anuncio Casa en el Lago">
+                <div class="contenido-anuncio">
+                    <h3>Casa de Lujo en el Lago</h3>
+                    <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
+                    <p class="precio">$3.000.000</p>
+                    <ul class="iconos-características">
+                        <li>
+                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_estacionamiento.svg" alt="autos">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_dormitorio.svg" alt="cuartos">
+                            <p>4</p>
+                        </li>
+                    </ul>
+                    <a href="#" class="botón botón-amarillo d-block">Ver Propiedad</a>
+                </div>
+            </div>
+
+            <div class="anuncio">
+                <img src="img/anuncio2.jpg" alt="Anuncio Casa de Lujo">
+                <div class="contenido-anuncio">
+                    <h3>Casa terminados de Lujo</h3>
+                    <p>Casa con diseño moderno, así como tecnología inteligente y amueblada</p>
+                    <p class="precio">$2.000.000</p>
+                    <ul class="iconos-características">
+                        <li>
+                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_estacionamiento.svg" alt="autos">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_dormitorio.svg" alt="cuartos">
+                            <p>4</p>
+                        </li>
+                    </ul>
+                    <a href="#" class="botón botón-amarillo d-block">Ver Propiedad</a>
+                </div>
+            </div>
+
+            <div class="anuncio">
+                <img src="img/anuncio3.jpg" alt="Anuncio Casa con Alberca">
+                <div class="contenido-anuncio">
+                    <h3>Casa con Alberca</h3>
+                    <p>Casa con alberca y acabdos de lujo en la ciudad, excelente oportunidad</p>
+                    <p class="precio">$3.000.000</p>
+                    <ul class="iconos-características">
+                        <li>
+                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_estacionamiento.svg" alt="autos">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_dormitorio.svg" alt="cuartos">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a href="#" class="botón botón-amarillo d-block">Ver Propiedad</a>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="ver-todas">
+            <a href="anuncios.html" class="botón botón-verde">Ver Todas</a>
+        </div>
+
+    </main>
+
+    <!-- Aquí vuelve a aplicar SECTION porque tiene nuevamente HX (un título de importancia, en este caso H2) y por ende es válido usar SECTION -->
+    <section class="imagen-contacto">
+        <div class="contenedor contenido-contacto">
+            <h2>Encuentra la casa de tus sueños</h2>
+            <p>Llena el formulario de contacto y un asesor se pondrá en contacto contigo a la brevedad</p>
+            <a href="contacto.html" class="botón botón-amarillo">Contáctanos</a>
+        </div>
+    </section>
+
+    <div class="sección-inferior contenedor sección">
+        <section class="blog">
+            <h3 class="centrar-texto fw-300">Nuestro Blog</h3>
+
+            <!-- Se usa ARTICLE comúnmente para secciones como blogs, por eso lo estamos usando aquí y se coloca para rodear la entrada de blog. Se usa también en foros, clasificados, etc... -->
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <img src="img/blog1.jpg" alt="Terraza">
+                </div>
+                <div class="texto-entrada">
+                    <!-- Recordemos que para simular un enlace al clickear, usamos # en donde va el link -->
+                    <a href="#">
+                        <h4>Terraza en el techo de tu casa</h4>
+                    </a>
+                    <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
+                    <!-- Se usa em | strong | b para dar un FORMATO ya sea de itálico, bold, etc... a cosas dentro de HTML pero por lo general es mejor hacer todo en CSS -->
+                    <p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y
+                        ahorrando
+                        dinero
+                    </p>
+                </div>
+            </article>
+
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <img src="img/blog2.jpg" alt="Decoración">
+                </div>
+                <div class="texto-entrada">
+                    <a href="#">
+                        <h4>Guía para la decoración de tu hogar</h4>
+                    </a>
+                    <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
+                    <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para
+                        darle
+                        vida a
+                        tu
+                        espacio
+                    </p>
+                </div>
+            </article>
+
+        </section>
+
+        <section class="testimoniales">
+            <h3 class="centrar-texto fw-300">Testimoniales</h3>
+            <!-- Esta etiqueta "blockquote" se usa para TESTIMONIALES para agregar las comillas -->
+            <div class="testimonial">
+                <blockquote>
+                    El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron
+                    cumple con
+                    todas
+                    mis espectativas.
+                </blockquote>
+                <p>- Leonardo Vasconcelos</p>
+            </div>
+        </section>
+
+    </div>
+
+    <!-- Se suele usar siempre al final de la página y puede contener NAVBAR también. Se puede usar también para la misma función de ser como la parte final de una sección (se podría usar por ejemplo arriba en TESTIMONIALS donde dice mi nombre e incluir todo ese P como algo adentro de FOOTER) -->
+    <footer class="site-footer sección">
+        <div class="contenedor contenedor-footer">
+            <nav class="navegación">
+                <a href="nosotros.html">Nosotros</a>
+                <a href="anuncios.html">Anuncios</a>
+                <a href="blog.html">Blog</a>
+                <a href="contacto.html">Contacto</a>
+            </nav>
+            <p class="copyright">Todos los Derechos Reservados 2020 &copy;</p>
+            <!-- Se usa &copy porque es una forma de poner una ENTIDAD que es como un atajo para poner símbolos en HTML -->
+        </div>
+    </footer>
+
+</body>
 
 </html>
