--- a/contacto.html
+++ b/contacto.html
@@ -82,6 +82,9 @@
             <!-- Aquí cambiamos el valor de TYPE a "EMAIL" porque es lo que se adecúa al tipo de casilla que estamos usando e información que estamos pidiendo, además que eso ayudará a validar que sea una dirección correcta (que contenga un @) -->
             <!-- También podemos usar en los INPUT lo siguiente para requerir esos datos obligatoriamente: REQUIRED , así de esta manera cuando presionemos el botón de submit que creamos más abajo, verá si en este campo se ingresó lo que se pedía -->
 
+<label for="teléfono">Teléfono:</label>
+<input type="tel" id="teléfono" placeholder="Tu teléfono" required>
+
             <input type="submit">
 
         </form>
