--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <a href="entrada.html">
                         <h4>Terraza en el techo de tu casa</h4>
                     </a>
-                    <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
+                    <p>Escrito el: <span> 20/10/2019 </span> por: <span> Manuel </span> </p>
                     <!-- Se usa em | strong | b para dar un FORMATO ya sea de itálico, bold, etc... a cosas dentro de HTML pero por lo general es mejor hacer todo en CSS -->
                     <p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y
                         ahorrando
@@ -227,7 +227,7 @@
                     <a href="entrada.html">
                         <h4>Guía para la decoración de tu hogar</h4>
                     </a>
-                    <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
+                    <p>Escrito el: <span> 20/10/2019 </span> por: <span> Carlos </span> </p>
                     <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para
                         darle
                         vida a
